fix input styles on mobile (still using type=number)

--- a/style/inputs.scss
+++ b/style/inputs.scss
@@ -26,7 +26,8 @@
 		}
 	}
 
-	input[type='text'] {
+	input[type='text'],
+	input[type='number'] {
 		padding: var(--widget-padding);
 		&:focus {
 			background: var(--focus-color);
